# phrottle

./: .gitignore  .prettierrc  README.md  hardware.py  layout.py  main.py  pyproject.toml  setup.cfg  throttle.py  wifi.py
lib/: morse.py
setup/: configure-wifi.py
src/: detectors.py  hardware.py  layout.py  lever.py  main.py  mock_hardware.py  rc_detector.py  scheduler.py  script.js  server.py  shuttle_train.py  throttle.py
src/lib/: microdot_websocket.py  wifi.py
src/rp2/: commands.py  config.json  definitions.py  detectors.py  hardware.py  layout.py  lever.py  main.py  rc_detector.py  run_sensors.py  scheduler.py  server.py  speaker.py
src/rp2-fire-and-ice/: README.md  hardware.py  main.py  simulate_fire_and_ice.py  simulate_guard.py  stately.py
src/rp2-fire-and-ice/sandbox/: led_blink.py  led_brightness.py  led_flicker.py
src/rp2-guard/: README.md  hardware.py  main.py  simply_robotics.py  stately.py
src/rp2-motors/lib/: SimplyRobotics.py
src/rp2-sensors/: detectors.py
src/rp2-sensors/lib/: umqtt.simple.sh
src/rp2-server/: script.js
src/rp2-server/lib/: microdot_asyncio.py
src/rp2/lib/: wifi.py
src/rp2/templates/: throttle.html
src/sandbox/: _boot.py  main.cpython.py  main_extras.py  motors.py  point-motor.py
src/scripts/: car-counter-shuttle.py  car-counter.py  car_track_shuttle.py  check_sensors.py  distance_sensor.py  monitor_sensors.py  mosquitto.py  point-motor.py  servo.py  shuttle_train.py
src/scripts/motors/: point-motor.py
src/scripts/sensors/: check_sensors.py  monitor_sensors.py  simpler_sensor_counting.py
src/setup/: configure-wifi.py  install-dependencies.py  sync.py
src/templates/: jumbotron-page.html  throttle.html
templates/: jumbotron.html  page.html
tests/: test_layout.py
