[tool.ruff]
extend-exclude = ["src/rp2/lib/", "src/sandbox/"]
line-length = 100

# [tool.ruff.lint]
# select = ["E4", "E7", "E9", "F", "W", "C", "D", "I", "N"]

[tool.ruff.lint]
select = [
    # Default rules
    "E4",
    "E7",
    "E9",
    "F",
    # Additional rules
    "I",    # Import order
    "D",    # Docstrings
    "D401", # First line should be in imperative mood
    "D213", # Multi-line docstring summary should start at the second line
]
ignore = [
    "D100", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D417", # Missing argument descriptions in the docstring
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/*/__init__.py" = ["D"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.poetry]
name = "phrottle"
version = "0.1.0"
description = "A model railway controller for the Pico"
authors = ["rollcloud <rollcloud@gmail.com>"]
license = "License :: OSI Approved :: GNU Affero General Public License v3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"
mpremote = "^1.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
